--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 /* Space out content a bit */
 body {
   /*padding-top: 20px;
@@ -8,18 +8,29 @@ body {
 }
 * {
     color: white;
-    font-family: 'Source Code Pro', monospace; 
+    font-family: 'Lato', sans-serif;
+    word-spacing: 1.5px; 
+    letter-spacing: 1px;
 }
 a {
     color: inherit;
 }
+a:hover {
+  text-decoration: none;
+  color: inherit;
 }
+
 
 .bg1 {
     background-color: rgb(36,36,36);
-    margin: 0 auto;
+    margin-top: 15px;
     position: relative;
-    top: -50px;
+    padding: 25px;
+}
+.shadow {
+    -webkit-box-shadow: 1px 1px 1px 2px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+    -moz-box-shadow:    1px 1px 1px 2px #ccc;  /* Firefox 3.5 - 3.6 */
+    box-shadow:         1px 1px 1px 2px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
 }
 .navbar-default {
     background-color: rgb(0,100,0);
@@ -28,23 +39,47 @@ a {
     position: relative;
     left: -50px;
 }
+.fa-search,
+.fa-home {
+  color: rgb(0,0,0);
+}
 
 input[type=text] {
     border: 1px solid rgb(0,0,0);
     border-radius: 0;
 }
-button[type=submit] {
+.btn-default {
     border: 1px solid rgb(0,0,0);
     border-radius: 0;
+    color: rgb(0,0,0);
 }
 
-/*.navbar-brand {
-    color: white;
-}*/
 
-/*.navbar {
-    width: 100%;
-}*/
+.pdf-btn {
+  background-color: rgb(0,100,0);
+  border: 1px solid rgb(0,0,0);
+  border-radius: 0;
+  margin: 5px;
+}
+
+.fa-code-fork {
+  color: rgb(0,0,0);
+}
+ul {
+  list-style: none;
+}
+ul li {
+  padding: 5px 0 5px 30px;
+  position: relative;
+}
+ul li:before {
+  content: '\f085';
+  color: rgb(0,100,0);
+  font-family: 'FontAwesome';
+  position: absolute;
+  top: 6px;
+  left: 5px;
+}
 
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -72,6 +107,10 @@ button[type=submit] {
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
+  text-align: center;
+}
+.social-icons {
+  padding: 3px 10px 3px 10px;
 }
 
 /* Customize container */
@@ -84,18 +123,6 @@ button[type=submit] {
   margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
-/*.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-  /*background-image: url(../assets/fcc-nwk.jpg);
-  height: 100vh;
-  width: 100vw;*/
-/*}*/
-/*.jumbotron .btn {
-  padding: 14px 24px;
-  font-size: 21px;
-}*/
 
 /* Supporting marketing content */
 .content {
